# shibuya-scramble

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt
doc/: predict.csv
notebooks/: classification_cars.ipynb  yolo_v9.ipynb  yolo_v9_shinjuku.ipynb
runs/detect/predict/labels/: 20240512_000000.txt  20240512_000100.txt  20240512_000200.txt  20240512_000300.txt  20240512_000400.txt  20240512_000500.txt  20240512_000600.txt  20240512_000700.txt  20240512_000800.txt  20240512_000900.txt  20240512_001000.txt  20240512_001100.txt  20240512_001200.txt  20240512_001300.txt  20240512_001400.txt  20240512_001500.txt  20240512_001600.txt  20240512_001700.txt  20240512_001800.txt  20240512_001900.txt  20240512_002000.txt  20240512_002100.txt  20240512_002200.txt  20240512_002300.txt  20240512_002400.txt  20240512_002500.txt  20240512_002600.txt  20240512_002700.txt  20240512_002800.txt  20240512_002900.txt  20240512_003000.txt  20240512_003100.txt  20240512_003200.txt  20240512_003300.txt  20240512_003400.txt  20240512_003500.txt  20240512_003600.txt  20240512_003700.txt  20240512_003800.txt  20240512_003900.txt  (+1400 more)
src/: youtube_capture.py
