[tool.poetry]
name = "shibuya-scramble"
version = "0.1.0"
description = ""
authors = ["key-chan <new.folder@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
roboflow = "^1.1.30"
opencv-python-headless = "4.8.0.76"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
